SLING-4211 - testing/pom.xml added
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1642316 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -188,18 +188,7 @@
         <module>bundles/extensions/models/integration-tests</module>
 
         <!-- Testing Support -->
-        <module>testing/tools</module>
-        <module>testing/junit/core</module>
-        <module>testing/junit/scriptable</module>
-        <module>testing/junit/healthcheck</module>
-        <module>testing/junit/remote</module>
-        <module>testing/junit/performance</module>
-        <module>testing/mocks/resourceresolver-mock</module>
-        <module>testing/mocks/jcr-mock</module>
-        <module>testing/mocks/osgi-mock</module>
-        <module>testing/mocks/sling-mock</module>
-        <module>testing/mocks/sling-mock-jackrabbit</module>
-        <module>testing/sling-pax-util</module>
+        <module>testing</module>
         
         <!-- Installer -->
         <module>installer/core</module>
@@ -218,10 +207,6 @@
         <module>launchpad/content</module>
         <module>launchpad/builder</module>
         
-        <!-- Testing Samples -->
-        <module>testing/samples/sample-tests</module>
-        <module>testing/samples/failing-tests</module>
-        <module>testing/samples/integration-tests</module>
     </modules>
 
     <profiles>
