SLING-3017 fix excludes (r1640720)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1642812 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
+++ b/contrib/launchpad/karaf/org.apache.sling.launchpad.karaf-integration-tests/pom.xml
@@ -159,10 +159,10 @@
               </execution>
             </executions>
             <configuration>
-              <includes>
-                <include>**/SlingExtensionModelsIT.*</include>
-                <!-- <include>**/SlingScriptingJavaIT.*</include> -->
-              </includes>
+              <excludes>
+                <exclude>**/SlingExtensionModelsIT.*</exclude>
+                <exclude>**/SlingScriptingJavaIT.*</exclude>
+              </excludes>
             </configuration>
           </plugin>
         </plugins>
