SLING-4161 support Sling Validation by a new field on the Model annotation
The dependency to Sling Validation is optional (i.e. Sling Models still work even if  Sling Validation is not deployed)

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1644069 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/models/api/pom.xml
+++ b/bundles/extensions/models/api/pom.xml
@@ -49,6 +49,7 @@
                 <configuration>
                    <instructions>
                         <Export-Package>org.apache.sling.models.*,javax.inject;version=0</Export-Package>
+                        <DynamicImport-Package>org.apache.sling.validation.api.*</DynamicImport-Package>
                    </instructions>
                 </configuration>
             </plugin>
@@ -59,6 +60,19 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.validation.api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
