--- a/bundles/extensions/models/impl/pom.xml
+++ b/bundles/extensions/models/impl/pom.xml
@@ -54,6 +54,7 @@
                         <Embed-Dependency>
                             *;scope=compile,
                             org.osgi.compendium;inline="org/osgi/util/tracker/*"</Embed-Dependency>
+                        <DynamicImport-Package>org.apache.sling.validation.api.*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -137,6 +138,13 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.validation.api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
