--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.junit.scriptable</artifactId>
-    <version>1.0.9-SNAPSHOT</version>
+    <version>1.0.10</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling JUnit Scriptable Tests Provider</name>
@@ -38,9 +38,9 @@
     </description>
     
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/testing/junit/scriptable</connection>
-        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/trunk/testing/junit/scriptable</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/testing/junit/scriptable</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.junit.scriptable-1.0.10</connection>
+        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.junit.scriptable-1.0.10</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.junit.scriptable-1.0.10</url>
     </scm>
 
     <build>
