Update dependencies after junit.* modules release
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1645929 13f79535-47bb-0310-9956-ffa450edef68

--- a/testing/samples/integration-tests/pom.xml
+++ b/testing/samples/integration-tests/pom.xml
@@ -257,7 +257,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.junit.core</artifactId>
-            <version>1.0.11-SNAPSHOT</version>
+            <version>1.0.10</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -287,7 +287,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.junit.remote</artifactId>
-            <version>1.0.9-SNAPSHOT</version>
+            <version>1.0.10</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
