--- a/launchpad/integration-tests/pom.xml
+++ b/launchpad/integration-tests/pom.xml
@@ -270,7 +270,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.junit.remote</artifactId>
-      <version>1.0.11-SNAPSHOT</version>
+      <version>1.0.10</version>
     </dependency>
     <dependency>
     	<groupId>org.codehaus.plexus</groupId>
