SLING-4253 : ServerSideScriptsTest / installer-duplicate.jsp integration test fails
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1646225 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/testing/pom.xml
+++ b/launchpad/testing/pom.xml
@@ -165,6 +165,28 @@
                     <defaultBundleList>
                         <version>8-SNAPSHOT</version>
                     </defaultBundleList>
+                    <jarWebSupport>
+                        <bundles>
+                          <bundle>
+                                <groupId>org.apache.felix</groupId>
+                                <artifactId>org.apache.felix.http.api</artifactId>
+                                <version>2.3.2</version>
+                                <startLevel>5</startLevel>
+                            </bundle>
+                            <bundle>
+                                <groupId>org.apache.felix</groupId>
+                                <artifactId>org.apache.felix.http.servlet-api</artifactId>
+                                <version>1.0.1</version>
+                                <startLevel>5</startLevel>
+                            </bundle>
+                            <bundle>
+                                <groupId>org.apache.felix</groupId>
+                                <artifactId>org.apache.felix.http.jetty</artifactId>
+                                <version>2.3.2</version>
+                                <startLevel>5</startLevel>
+                            </bundle>
+                        </bundles>
+                    </jarWebSupport>
                 </configuration>
                 <dependencies>
                     <dependency>
