--- a/installer/core/pom.xml
+++ b/installer/core/pom.xml
@@ -54,15 +54,15 @@
 						<Bundle-Activator>
 							org.apache.sling.installer.core.impl.Activator
                         </Bundle-Activator>
-						<Private-Package>
-						    org.apache.sling.installer.core.impl.*
-						</Private-Package>
+                        <Private-Package>
+                            org.apache.sling.installer.core.impl.*
+                        </Private-Package>
                         <Export-Package>
-                            org.apache.sling.installer.api;version=3.1.2,
-                            org.apache.sling.installer.api.info;version=1.0.0,
-                            org.apache.sling.installer.api.event;version=1.0.0,
-                            org.apache.sling.installer.api.tasks;version=1.3.0,
-                            org.apache.sling.installer.api.jmx;version=1.0.0
+                            org.apache.sling.installer.api,
+                            org.apache.sling.installer.api.info,
+                            org.apache.sling.installer.api.event,
+                            org.apache.sling.installer.api.tasks,
+                            org.apache.sling.installer.api.jmx
                         </Export-Package>
 				     <!-- 
 				        As we make use of optional features from 4.3 if they
