--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -31,36 +31,36 @@ org.apache.sling.scripting.thymeleaf.names.name = names
 org.apache.sling.scripting.thymeleaf.names.description = names
 
 # NonCachingTemplateResolver
-org.apache.sling.scripting.thymeleaf.impl.NonCachingTemplateResolver.order.name = order
-org.apache.sling.scripting.thymeleaf.impl.NonCachingTemplateResolver.order.description = property for ordering template resolvers inside the Thymeleaf template engine
+org.apache.sling.scripting.thymeleaf.internal.NonCachingTemplateResolver.order.name = order
+org.apache.sling.scripting.thymeleaf.internal.NonCachingTemplateResolver.order.description = property for ordering template resolvers inside the Thymeleaf template engine
 
-org.apache.sling.scripting.thymeleaf.impl.NonCachingTemplateResolver.encoding.name = encoding
-org.apache.sling.scripting.thymeleaf.impl.NonCachingTemplateResolver.encoding.description = encoding for reading templates
+org.apache.sling.scripting.thymeleaf.internal.NonCachingTemplateResolver.encoding.name = encoding
+org.apache.sling.scripting.thymeleaf.internal.NonCachingTemplateResolver.encoding.description = encoding for reading templates
 
 # ResourceBundleMessageResolver
-org.apache.sling.scripting.thymeleaf.impl.ResourceBundleMessageResolver.order.name = order
-org.apache.sling.scripting.thymeleaf.impl.ResourceBundleMessageResolver.order.description = property for ordering message resolvers inside the Thymeleaf template engine
+org.apache.sling.scripting.thymeleaf.internal.ResourceBundleMessageResolver.order.name = order
+org.apache.sling.scripting.thymeleaf.internal.ResourceBundleMessageResolver.order.description = property for ordering message resolvers inside the Thymeleaf template engine
 
 # XmlTemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.XmlTemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.XmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xml - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.XmlTemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.XmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xml - NOTE: extension needs to be enabled for this script engine)
 
 # ValidatingXmlTemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.ValidatingXmlTemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.ValidatingXmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xml - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.ValidatingXmlTemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.ValidatingXmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xml - NOTE: extension needs to be enabled for this script engine)
 
 # XhtmlTemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.XhtmlTemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.XhtmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xhtml - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.XhtmlTemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.XhtmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xhtml - NOTE: extension needs to be enabled for this script engine)
 
 # ValidatingXhtmlTemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.ValidatingXhtmlTemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.ValidatingXhtmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xhtml - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.ValidatingXhtmlTemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.ValidatingXhtmlTemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.xhtml - NOTE: extension needs to be enabled for this script engine)
 
 # Html5TemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.Html5TemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.Html5TemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.html) - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.Html5TemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.Html5TemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.html) - NOTE: extension needs to be enabled for this script engine)
 
 # LegacyHtml5TemplateModeHandler
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.LegacyHtml5TemplateModeHandler.patterns.name = patterns
-org.apache.sling.scripting.thymeleaf.impl.templatemodehandler.LegacyHtml5TemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.html) - NOTE: extension needs to be enabled for this script engine)
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.LegacyHtml5TemplateModeHandler.patterns.name = patterns
+org.apache.sling.scripting.thymeleaf.internal.templatemodehandler.LegacyHtml5TemplateModeHandler.patterns.description = the template patterns (regular expressions) this service should handle (e.g. /apps/sling/*.html) - NOTE: extension needs to be enabled for this script engine)
