--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                           com.mongodb;resolution:=optional,
                           org.apache.jackrabbit.oak.security.user;resolution:=optional,
                           org.apache.jackrabbit.oak.spi.security.authentication,
+                          org.apache.felix.jaas.boot,
                           *
                         </Import-Package>
                         
