SLING-4277 - Enable JAAS integration with Oak
-- Use SecurityProvider registered by Oak instead of instantiating a custom one
-- Add OSGi config to enable JR2 compatible config. This replaces the config as created in buildSecurityConfig
-- Replace the various login method with a single login method which is eventually called by RepositoryImpl
-- Add import for Felix JAAS package

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1649301 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/oak-server/pom.xml
+++ b/bundles/jcr/oak-server/pom.xml
@@ -63,6 +63,7 @@
                           com.mongodb;resolution:=optional,
                           org.apache.jackrabbit.oak.security.user;resolution:=optional,
                           org.apache.jackrabbit.oak.spi.security.authentication,
+                          org.apache.felix.jaas.boot,
                           *
                         </Import-Package>
                         
