SLING-3227 - FormLoginModulePlugin does not work with Oak
Add FormLoginModule based on Oak support for JAAS authentication
-- FormAuthenticationHandler would use FormLoginModule or FormLoginModulePlugin depending on support for Oak LoginModule. This would enable use of same bundle in both Oak and JR2 based Sling deployments
-- For JAAS auth the handler would construct a FormCrendentials instance which is supported by FormLoginModule only. Once validated it would make use of Oak pre auth support to let Oak complete the JAAS login

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1649302 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/auth/form/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/auth/form/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -91,4 +91,19 @@ form.default.cookie.domain.name = Default Cookie Domain
 form.default.cookie.domain.description = The domain on which authentication cookies will \
  be set, unless overridden in the AuthenticationInfo object. The default is null \
  which means to set the cookie on the request domain.
- 
+
+jaas.controlFlag.name = JAAS Control Flag
+jaas.controlFlag.description = Property name specifying whether or not a LoginModule is REQUIRED, REQUISITE, SUFFICIENT \
+  or OPTIONAL. Refer to the JAAS configuration documentation for more details around the meaning of these flags. \
+  Jackrabbit Oak only.
+
+jaas.realmName.name = JAAS Realm
+jaas.realmName.description = Property name specifying the realm name (or application name) against which the LoginModule \
+  is be registered. If no realm name is provided then LoginModule is registered with a default realm as configured in \
+  the Felix JAAS configuration. \
+  Jackrabbit Oak only.
+
+jaas.ranking.name = JAAS Ranking
+jaas.ranking.description = Property name specifying the ranking (i.e. sort order) of the configured login module \
+  entries. The entries are sorted in a descending order (i.e. higher value ranked configurations come first). \
+  Jackrabbit Oak only.
