Fix pom by adding missing bundles element
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1649854 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -176,6 +176,7 @@
                         <version>8-SNAPSHOT</version>
                     </defaultBundleList>
                     <jarWebSupport>
+                        <bundles>
                           <bundle>
                                 <groupId>org.apache.felix</groupId>
                                 <artifactId>org.apache.felix.http.api</artifactId>
@@ -194,6 +195,7 @@
                                 <version>2.3.2</version>
                                 <startLevel>5</startLevel>
                             </bundle>
+                        </bundles>
                     </jarWebSupport>
                     <additionalBundles>
                         <bundle>
