prevent inlining of original AbstractHtmlTemplateParser* classes (default merge-first for split package org.thymeleaf.templateparser.html seems to be broken)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1649891 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/thymeleaf/pom.xml
+++ b/contrib/scripting/thymeleaf/pom.xml
@@ -178,7 +178,7 @@
               *
             </DynamicImport-Package>
             <Embed-Dependency>
-              *;scope=compile;inline=true
+              *;scope=compile;inline=true;inline=!**/AbstractHtmlTemplateParser*.class
             </Embed-Dependency>
             <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
             <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
