SLING-4282 [Sightly] Fully qualified Use POJOs are not correctly identified in the repository
Apply patch by Radu Cotescu (thanks alot)

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1650895 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/engine/pom.xml
+++ b/contrib/scripting/sightly/engine/pom.xml
@@ -253,6 +253,32 @@
             <version>1.4</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.5.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.5.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
