SLING-4147 - Remove extensions from package name org.apache.sling.extensions.datasource.internal
-- Fixing the artifactId to not have extension
-- Fix test class package name and jacoco config to not have extensions

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1652046 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/datasource/pom.xml
+++ b/contrib/extensions/datasource/pom.xml
@@ -29,7 +29,7 @@
     <version>22</version>
   </parent>
 
-  <artifactId>org.apache.sling.extensions.datasource</artifactId>
+  <artifactId>org.apache.sling.datasource</artifactId>
   <packaging>bundle</packaging>
   <version>1.0.1-SNAPSHOT</version>
 
@@ -268,7 +268,7 @@
                 <configuration>
                   <propertyName>coverage.command</propertyName>
                   <includes>
-                    <include>org.apache.sling.extensions.datasource.internal.*</include>
+                    <include>org.apache.sling.datasource.internal.*</include>
                   </includes>
                 </configuration>
               </execution>
