SLING-4307 : Avoid caching JCR property values
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1652218 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/resource/pom.xml
+++ b/bundles/jcr/resource/pom.xml
@@ -92,9 +92,9 @@
                             org.apache.jackrabbit.api.observation
                         </DynamicImport-Package>
 
-                        <!-- Include URL support from Jackrabbit -->
+                        <!-- Include utility classes from Jackrabbit JCR Commons -->
                         <Embed-Dependency>
-                            jackrabbit-jcr-commons;inline="org/apache/jackrabbit/util/ISO9075.*|org/apache/jackrabbit/name/QName.*|org/apache/jackrabbit/util/XMLChar.*|org/apache/jackrabbit/util/Text.*",
+                            jackrabbit-jcr-commons;inline="org/apache/jackrabbit/util/ISO8601.*|org/apache/jackrabbit/util/ISO9075.*|org/apache/jackrabbit/name/QName.*|org/apache/jackrabbit/util/XMLChar.*|org/apache/jackrabbit/util/Text.*",
                         </Embed-Dependency>
 
                         <Sling-Namespaces>
