SLING-4321 make SLF4J API available at compile and testing time (even for dependent modules)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/testing/junit/remote@1652381 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,13 @@
             <version>4.8.2</version>
             <scope>compile</scope>
         </dependency>
+        <!-- SLF4J is needed at runtime (whenever SlingRemoteTestRunner is executed) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.5.11</version>
+            <!-- scope must be given explicitly because it has provided scope in the depMgmt -->
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
