SLING-4323 Fix SCM locations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1652412 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/testing-content/pom.xml
+++ b/contrib/scripting/sightly/testing-content/pom.xml
@@ -45,11 +45,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/scripting/sightly/testing-content</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/scripting/sightly/testing
-            -content
-        </developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/scripting/sightly/testing-content</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/sightly/testing-content</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/sightly/testing-content</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/contrib/scripting/sightly/testing-content</url>
     </scm>
 
     <properties>
