SLING-4333 Use Launchpad 7 bundles and Launchpad Installer 1.2.2 to run the tests
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1653035 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -173,7 +173,7 @@
                     <controlHost>${test.host}</controlHost>
                     <controlPort>${sling.control.port}</controlPort>
                     <defaultBundleList>
-                        <version>8-SNAPSHOT</version>
+                        <version>7</version>
                     </defaultBundleList>
                     <jarWebSupport>
                         <bundles>
@@ -201,7 +201,7 @@
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.launchpad.installer</artifactId>
-                            <version>1.2.1-SNAPSHOT</version>
+                            <version>1.2.2</version>
                         </bundle>
                         <bundle>
                             <groupId>org.apache.sling</groupId>
