Set ConfigurationPolicy to REQUIRE, so the servlet is disabled by default.

--- a/bundles/servlets/get/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/servlets/get/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -26,6 +26,10 @@
 servlet.get.name = Apache Sling GET Servlet
 servlet.get.description = The Sling GET servlet is registered as the default \
  servlet to handle GET requests.
+ 
+servlet.version.name = Apache Sling Version Info Servlet
+servlet.version.description = The Sling Version Info Servlet renders list of \
+versions available for the current resource
 
 aliases.name = Extension Aliases
 aliases.description = The aliases can be used to map several extensions to a \
