Update the description
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1658698 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <name>Apache Sling (Builder)</name>
     <description>
-        Pseudo project to build the complete Sling project
+        Pseudo project to build the complete Apache Sling project.
     </description>
 
     <inceptionYear>2007</inceptionYear>
