trivial: explicitly set the sling.home property for the maven-launchpad-plugin
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1659249 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -80,10 +80,6 @@
                             <directory>${basedir}</directory>
                             <includes>
                                 <include>derby.log</include>
-                                <include>cachedir</include>
-                                <include>sling/**</include>
-                                <include>jackrabbit</include>
-                                <include>coverage.ec</include>
                             </includes>
                         </fileset>
                     </filesets>
@@ -169,6 +165,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <slingHome>${project.build.directory}/sling</slingHome>
                     <httpPort>${http.port}</httpPort>
                     <controlHost>${test.host}</controlHost>
                     <controlPort>${sling.control.port}</controlPort>
