--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -118,6 +118,7 @@
                 <configuration>
                     <includes>
                         <include>%regex[.*LaunchpadReadyIT.*]</include>
+                        <include>%regex[.*SlingSpecificsSightlyIT.*]</include>
                         <include>%regex[.*TestsRunner.*]</include>
                     </includes>
                     <dependenciesToScan>
