SLING-4358 - Add the 'Provide-Capability' OSGi header to the org.apache.sling.scripting.sightly bundle
* added Provide-Capability / Require-Capability headers to Sightly bundles

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1660139 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/engine/pom.xml
+++ b/contrib/scripting/sightly/engine/pom.xml
@@ -80,6 +80,7 @@
                         <Embed-Dependency>antlr4-runtime,org.abego.treelayout.core</Embed-Dependency>
                         <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
                         <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
+                        <Provide-Capability>io.sightly; version:Version=1.0, io.sightly; version:Version=1.1</Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
