resource-editor :: using fully qualified artifactId now in the pom
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1660197 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/explorers/resourceeditor/pom.xml
+++ b/contrib/explorers/resourceeditor/pom.xml
@@ -21,7 +21,7 @@
         </parent>
 
 	<groupId>org.apache.sling</groupId>
-	<artifactId>resource-editor</artifactId>
+	<artifactId>org.apache.sling.resource-editor</artifactId>
 	<packaging>bundle</packaging>
 	<version>1.0.1-SNAPSHOT</version>
 	<name>Apache Sling Resource Editor</name>
