SLING-4364 :: Integrate new JavaScript node type library :: renamed 'de.sandroboehme.jsnodetypes' package to 'org.apache.sling.commons.js.nodetypes'
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1660214 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/explorers/resourceeditor/pom.xml
+++ b/contrib/explorers/resourceeditor/pom.xml
@@ -75,7 +75,7 @@
 					<instructions>
 						<Sling-Initial-Content>SLING-INF/libs/sling/resource-editor-static-content;overwrite:=true;path:=/libs/sling/resource-editor-static-content,SLING-INF/libs/sling/resource-editor;overwrite:=true;path:=/libs/sling/resource-editor</Sling-Initial-Content>
 						<Import-Package>!org.slf4j.impl,*,
-							de.sandroboehme.jsnodetypes.javascript,
+							org.apache.sling.commons.js.nodetypes.javascript,
 							javax.el,
 							javax.naming,
 							javax.servlet.jsp,
