SLING-4450 - Configure the XML validator to not run for content projects
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1661243 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-core/plugin.xml
+++ b/eclipse-core/plugin.xml
@@ -228,4 +228,15 @@
       	</include>
       </validator>
    </extension>
+   
+   <!-- disable XML validation for content projects -->
+    <extension id="org.apache.sling.ide.excludeXmlValidator" point="org.eclipse.wst.validation.exclude">
+    	<validator id="org.eclipse.wst.xml.core.xml">
+			<exclude>
+				<rules>
+					<facet id="sling.content"/>
+				</rules>
+			</exclude>
+		</validator>
+ 	</extension>
 </plugin>    
